syntax = "proto3";

package service.api.userservicev1;

option go_package = "github.com/ikaiguang/go-srv-services/api/user-service/v1/services;userservicev1";
option java_multiple_files = true;
option java_package = "service.api.userservicev1";
option java_outer_classname = "ServiceApiUserServiceV1";

import "google/api/annotations.proto";
import "api/user-service/v1/resources/user_auth.resource.v1.proto";

// SrvUserAuth 管理员服务
service SrvUserAuth {
  // LoginByEmail Email登录
  rpc LoginByEmail(userv1.LoginByEmailReq) returns (userv1.LoginResp) {
    option (google.api.http) = {
      post : "/api/v1/user/user-auth/login-by-email"
      body : "*"
    };
  }
  // Ping ping pong
  rpc Ping(userv1.PingReq) returns (userv1.PingResp) {
    option (google.api.http) = {
      get : "/api/v1/user/user-auth/ping"
      // body: "*"
    };
  }
}